[package]
name = "finance-counter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rust_decimal = { version = "1.37.2", features = ["macros"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
# eframe = "0.32.0"
# egui_extras = "0.32.0"
# eframe = { path = "../egui/crates/eframe" }
# egui_extras = { path = "../egui/crates/egui_extras" }
eframe = { git = "ssh://git@github.com/zezic/egui.git", rev = "f34a9498d19b53a6a79e8bf72d7e2da19c8c5af1" }
egui_extras = { git = "ssh://git@github.com/zezic/egui.git", rev = "f34a9498d19b53a6a79e8bf72d7e2da19c8c5af1", features = [
    "datepicker",
] }
